# Mineradio-Mac-Rebuild

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  tsconfig.frontend.json  vite.config.mjs
docs/licenses/: sonic-topography.txt
public/: desktop-lyrics-unlock.html  desktop-lyrics.html  index.html
public/scripts/: app.js
public/scripts/app/: README.md  bootstrap.js  load-order.json
public/styles/: app.css
scripts/: build-macos.sh  create-update-manifest.mjs  sync-version.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: clear_music_cache.toml  clear_music_login.toml  configure_global_hotkeys.toml  export_json_file.toml  get_desktop_lyrics_state.toml  get_music_cache_info.toml  import_json_file.toml  library_create_playlist.toml  library_delete_playlist.toml  library_delete_track.toml  library_import_files.toml  library_import_folder.toml  library_import_lx_file.toml  library_import_remote_playlist.toml  library_rename_playlist.toml  library_save_queue.toml  library_set_heart.toml  library_snapshot.toml  library_toggle_playlist_track.toml  move_lyrics_by.toml  open_music_cache_directory.toml  open_music_login.toml  open_update_installer.toml  set_desktop_lyrics_enabled.toml  set_lyrics_hot_bounds.toml  set_lyrics_lock_state.toml  set_lyrics_pointer_capture.toml  set_wallpaper_mode.toml  update_desktop_lyrics.toml  update_touch_bar_lyrics.toml  update_wallpaper_mode.toml  window_close.toml  window_exit_fullscreen_windowed.toml  window_get_state.toml  window_minimize.toml  window_start_drag.toml  window_toggle_fullscreen.toml  window_toggle_maximize.toml
src-tauri/src/: analyzer.rs  bridge.js  lib.rs  local_library.rs  main.rs  server.rs
src/frontend/: api-client.ts  desktop-api.ts  legacy-source-order.mjs  legacy-state-bindings.mjs  lyrics-parser.ts  main.ts  ui-feedback.ts  update-format.ts  virtual-modules.d.ts
(+336 files in other folders)
