[package]
name = "mineradio"
version = "2.0.2"
description = "Mineradio desktop player"
authors = ["Mineradio"]
edition = "2021"

[lib]
name = "mineradio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
base64 = "0.22"
futures-util = "0.3"
mime_guess = "2"
md5 = "0.7"
percent-encoding = "2"
netease-qq-music-api = "0.1"
ncmapi2 = { path = "vendor/ncmapi2" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream", "json", "gzip", "brotli"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "vorbis", "wav"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSButton", "NSCell", "NSColor", "NSControl", "NSCustomTouchBarItem", "NSEvent", "NSImage", "NSImageView", "NSResponder", "NSTouchBar", "NSTouchBarItem", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSArray", "NSData", "NSGeometry", "NSObject", "NSSet", "NSString", "std"] }
objc2-web-kit = { version = "0.3", default-features = false, features = ["WKWebViewConfiguration"] }
